show comment css added

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+  integrity="sha384-wHz96nbAcX1FD7XJ7qPzH0taRkl7rO7Q4ZkoOpI4nFjqHJtu9SPtnA9O4w2eYiSEt"
+  crossorigin="anonymous"
+/>
+
   <div id="root"></div>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
